Fix user menu focus text colour when open on narrow screens

--- a/DarkNightAO3.user.css
+++ b/DarkNightAO3.user.css
@@ -676,7 +676,7 @@
 		background: var(--bg-color);
 	}
 
-	#header .dropdown a:focus, #header .dropdown .menu a:focus {
+	#header .dropdown a:focus, #header .dropdown .menu a:focus, #header .user .open a:focus {
 		color: #DD1919;
 	}
 
